# saf_sinasc

./: .gitignore  LICENSE  Makefile  README.md  create_single_sample.sh  pyproject.toml
data/compilations/samples/: 5x_neutral_entries_0.csv  5x_neutral_entries_1.csv  5x_neutral_entries_2.csv  5x_neutral_entries_3.csv  5x_neutral_entries_4.csv
data/scripts/: total_lines_per_state.json
notebooks/: 20221120_visualizing_tree.ipynb  20230213_testes_plots_automatizados.ipynb  20230311_model_script_graphs.ipynb  saf_sinasc
saf_sinasc/: config.py  feature_engineering.py  main.py  metrics.py  models.py
saf_sinasc/scripts/: check_sampling_eda_mechanism.py  compare_sampling_eda_stuff.py  config.py  count_all_lines_in_data_raw.py  create_all_columns_in_samples.py  create_all_graphs.py  create_all_samples.sh  create_by_state_folder.py  create_data_graphs.py  create_line_count_for_all_files.py  create_missing_data_report.py  create_model_graphs.py  create_percentage_wise_sample_for_eda.py  create_report_metrics_table.py  create_report_of_final_columns.py  create_single_sample.sh  express_model_evaluators.py
scripts/: create_all_samples.sh  create_line_count_for_all_files.py
