[tool.poetry]
name = "saf_sinasc"
version = "0.1.0"
description = ""
authors = ["Gabriel Simonetto <gabrielfranksimonetto@gmail.com>"]
readme = "README.md"
packages = [{include = "saf_sinasc"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
graphviz = "^0.20.1"
xgboost = "^1.7.3"
seaborn = "^0.12.2"
missingno = "^0.5.1"
joblib = "^1.2.0"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
